changing the icons

--- a/SpeechAndLeaflet/src/leaflet-0.7/leaflet.css
+++ b/SpeechAndLeaflet/src/leaflet-0.7/leaflet.css
@@ -212,13 +212,13 @@
 .leaflet-bar a:hover {
 	background-color: #fff;
 	border-bottom: 1px solid #ccc;
-	width: 26px;
-	height: 26px;
+	width: 36px;
+	height: 36px;
 	line-height: 26px;
 	display: block;
 	text-align: center;
 	text-decoration: none;
-	color: black;
+	color: blue;
 	}
 .leaflet-bar a,
 .leaflet-control-layers-toggle {
