--- a/SpeechAndLeaflet/src/leaflet.locator/L.Control.Locate.css
+++ b/SpeechAndLeaflet/src/leaflet.locator/L.Control.Locate.css
@@ -1,8 +1,8 @@
 /* Compatible with Leaflet 0.6 */
 
 .leaflet-touch .leaflet-bar-part-single {
-	-webkit-border-radius: 7px 7px 7px 7px;
-	        border-radius: 7px 7px 7px 7px;
+	-webkit-border-radius: 4px;
+	        border-radius: 4px;
 	border-bottom: none;
 }
 
@@ -30,5 +30,5 @@
 
 .leaflet-touch .leaflet-control-locate {
 	box-shadow: none;
-	border: 4px solid rgba(0,0,0,0.3);
+	border: 2px solid rgba(0,0,0,0.3);
 }
