--- a/SpeechAndLeaflet/src/custom/custom_css.css
+++ b/SpeechAndLeaflet/src/custom/custom_css.css
@@ -243,12 +243,13 @@ hr {
 }
 
 .sidebar {
-    text-align: center;
+
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
     background: rgba(255,255,255,0.85);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
+	height: auto !important;
 }
 
 .SidebarBorder {
